--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,6 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    buildToolsVersion rootProject.buildTools
     compileSdkVersion rootProject.compileSdk
 
     defaultConfig {
@@ -76,5 +75,5 @@ dependencies {
     }
 
     androidTestImplementation "org.hamcrest:hamcrest-core:$hamcrestVersion"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 }
